<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:textColor="@color/white"
            android:text="@string/open"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/open_shortcut"
            android:textSize="20dp"
            android:gravity="right"
            android:padding="3dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:textColor="@color/white"
            android:text="@string/save"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/save_shortcut"
            android:textSize="20dp"
            android:gravity="right"
            android:padding="3dp"/>
    </TableRow>
    <TableRow
        android:background="@drawable/border">
        <TextView
            android:textColor="@color/white"
            android:text="@string/save_as"


            android:textSize="20dp"
            android:paddingLeft="20dp"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/save_as_shortcut"
            android:textSize="20dp"
            android:gravity="right"
            android:padding="3dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:textColor="@color/white"
            android:text="@string/imp"
            android:textSize="20dp"
            android:padding="3dp"/>
    </TableRow>
    <TableRow
        android:background="@drawable/border">
        <TextView
            android:textColor="@color/white"
            android:text="@string/exp"
            android:textSize="20dp"
            android:padding="3dp"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/exp_shortcut"
            android:textSize="20dp"
            android:gravity="right"
            android:padding="3dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:textColor="@color/white"
            android:text="@string/quit"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>

    </TableRow>

</TableLayout>
